# AMA

./: Cargo.toml  Cargo.toml.p1-backup  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ama-core/: Cargo.toml
ama-core/src/: audit.rs  config.rs  errors.rs  idempotency.rs  lib.rs  mapper.rs  newtypes.rs  pipeline.rs  schema.rs  slime.rs
ama-core/src/actuator/: file.rs  http.rs  mod.rs
ama-core/tests/: p1_idempotency.rs  test_actuator_file.rs  test_actuator_http.rs  test_actuator_shell.rs  test_audit.rs  test_config.rs  test_idempotency.rs  test_mapper.rs  test_newtypes.rs  test_pipeline.rs  test_schema.rs  test_slime.rs
ama-daemon/: Cargo.toml
ama-daemon/src/: main.rs  server.rs
ama-daemon/tests/: p1_adversarial.rs  p1_queue.rs  p1_rate_limit.rs  p1_timeouts.rs  p2_adversarial.rs  p2_agent_routing.rs  p2_rate_limit.rs  test_integration.rs
config/: allowlist.toml  config.toml  domains.toml  intents.toml
config/agents/: ci-bot.toml  default.toml  developer.toml  hello-world.toml  readonly.toml
docs/: AMA_CONCURRENCY_MODEL.md  AMA_IDEMPOTENCY_STATE_MACHINE.md  AMA_P1_HELD.md  AMA_P1_PLAN.md  AMA_TIMEOUTS.md  ARCHITECTURE.md  CAPACITY_MODEL.md  HELLO_WORLD_PACKAGING_CANDIDATE.md  HELLO_WORLD_QUICKSTART.md  KNOWN_ISSUES_P1.md  P3_GAP_ANALYSIS.md  P3_SCOPE.md  SAFA_SLIME_PUBLIC_PROOF.md  THREAT_MODEL.md
docs/p1/: AMA_P1_TASKLIST.md  AMA_QUEUE_MODEL.md  SAFA_CONCURRENCY_MODEL.md  SAFA_IDEMPOTENCY_STATE_MACHINE.md  SAFA_P1_HELD.md  SAFA_P1_PLAN.md  SAFA_P1_TASKLIST.md  SAFA_QUEUE_MODEL.md  SAFA_TIMEOUTS.md
docs/superpowers/plans/: 2026-03-13-ama-p0-implementation.md  2026-03-16-ama-p2-multiagent.md
docs/superpowers/specs/: 2026-03-13-ama-p0-design.md  2026-03-15-obsidian-vault-design.md
examples/: README.md  file_write.json  http_request.json  shell_exec.json
safa-core/: Cargo.toml
safa-core/examples/: slime_public_proof.rs
safa-core/src/: audit.rs  config.rs  identity.rs  lib.rs  manifest.rs  newtypes.rs  pipeline.rs
safa-core/src/actuator/: http.rs  shell.rs
safa-core/tests/: p1_idempotency.rs  p3_bypass.rs  p3_workspace.rs  test_actuator_file.rs  test_actuator_http.rs  test_actuator_shell.rs  test_audit.rs  test_config.rs  test_idempotency.rs  test_mapper.rs  test_newtypes.rs  test_pipeline.rs  test_schema.rs  test_slime.rs
safa-daemon/: Cargo.toml
safa-daemon/src/: main.rs  server.rs
safa-daemon/tests/: p1_adversarial.rs  p1_queue.rs  p1_rate_limit.rs  p1_timeouts.rs  p2_adversarial.rs  p2_agent_routing.rs  p2_rate_limit.rs  test_integration.rs
src/: canonical.rs  config.rs  errors.rs  idempotency.rs  lib.rs  main.rs  pipeline.rs  schema.rs  server.rs
src/actuator/: file.rs  http.rs  mod.rs  shell.rs
tests/: p1_adversarial.rs  p1_idempotency.rs  p1_queue.rs  p1_rate_limit.rs  p1_timeouts.rs  test_actuator_file.rs  test_actuator_http.rs  test_actuator_shell.rs  test_audit.rs  test_config.rs  test_idempotency.rs  test_integration.rs  test_mapper.rs  test_newtypes.rs  test_pipeline.rs  test_schema.rs  test_slime.rs
