[package]
name = "ama"
version = "0.1.0"
edition = "2021"
description = "Agent Machine Armor — Deterministic security membrane for AI agents"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dashmap = "6"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["limit"] }
bytes = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
axum-test = "16"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
